<?xml version="1.0"?>
<package format="2">
  <name>docker_ros_k4a</name>
  <version>0.0.0</version>
  <description>The docker_ros_k4a package</description>

  <maintainer email="iory@gmail.com">Iori Yanokura</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
